@@ -11,6 +11,7 @@ Version 8.13 (Unreleased)
 - Add memory and storage information for apple devices
 - The legacy API keys feature is now disabled by default.
 - Show Images Loaded section for cocoa events with version number.
+- Fixed bug where workflow notification subject may not include a custom email prefix.
 
 Schema Changes
 ~~~~~~~~~~~~~~
